# fracter

./: Cargo.toml  readme.md
docs/: ex-sycamore-51c91524dc29d3b7.js  ex-sycamore-51c91524dc29d3b7_bg.wasm  ex-sycamore-afe45cd1a3ba322c.js  ex-sycamore-afe45cd1a3ba322c_bg.wasm  index.html
ex-sycamore/: Cargo.toml  Trunk.toml  index.html  style.css
ex-sycamore/src/: main.rs
src/: lib.rs
