[package]
name = "fracter"
version = "0.1.0"
edition = "2021"
authors = ["Acheul <seoul605.21@gmail.com>"]
repository = "https://github.com/acheul/fracter"
description = "Fragment hash based router, for Sycamore"
categories = ["wasm", "web-programming"]
keywords = ["fragment-hash"]
readme = "readme.md"
license = "MIT"
exclude = [
  "/ex-sycamore",
]

[dependencies]
gloo-utils = "0.2.0"
seoul = "0.1.0"
sycamore = { version = "0.9.0-beta.2" }
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Location", "PopStateEvent"
  # "History"
]
